--- a/baratheon.html
+++ b/baratheon.html
@@ -331,7 +331,8 @@
           
         </li>
         <li class="nav-item">
-         <div class="nav-item l"><a class="nav-link text-warning" href="lannister.html">Lannister</a></div> 
+         <div class="nav-item l">
+          <a class="nav-link text-warning" href="lannister.html">Lannister</a></div> 
         </li>
         <li class="nav-item">
           <div class="nav-item t"> <a class="nav-link  text-danger" href="targaryen.html">Targareyen</a></div>
